# raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: geometry.rs  lib.rs  lighting.rs  main.rs  materials.rs  prelude.rs  util.rs
src/examples/: basic.rs  cornell.rs
src/geometry/: mod.rs  plane.rs  sphere.rs
src/materials/: mod.rs
