[package]
name = "raytracer"
version = "0.1.0"
authors = ["Andy Sadler <sadlerap@rose-hulman.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19"
itertools = "0.8"
rand = "0.7"
rayon = "1.3.0"

[[example]]
name = "basic"
path = "src/examples/basic.rs"
